---
source: spade-tests/src/typeinference.rs
---
fn a() -> int<32> {
    decl x;
    let a = x.a;
    let x = 0u8;
    a
}


error: Field access on a primitive type
  ┌─ testinput:3:13
  │
3 │     let a = x.a;
  │             ^ expected a struct, got uint
  │
  = note: Field access is only allowed on structs
